# Ascendance

./: .Cargo.toml.un~  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Cargo.toml~  LICENSE  LICENSE.md  LICENSE~  Makefile.toml  README.md  TODO.TODO  _.swp  b.batch  file-list.txt  r.batch  rr.batch  run.bat  stats.txt
.cargo/: config.toml
.github/: FUNDING.yml  bors.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  source-code-access.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: release.yml  rust.yml  test.yml
.history/: .gitignore_20211124215431  .gitignore_20211201135525  .gitignore_20211201141116  .gitignore_20211201141819  .gitignore_20211201141828  .gitignore_20211212001105  .gitignore_20211212001357  Cargo_20211125092946.toml  Cargo_20211125233752.toml  Cargo_20211126201129.toml  Cargo_20211127112317.toml  Cargo_20211127112420.toml  Cargo_20211127112550.toml  Cargo_20211129144317.toml  Cargo_20211129145140.toml  Cargo_20211129145922.toml  Cargo_20211129174919.toml  Cargo_20211130145719.toml  Cargo_20211130155040.toml  Cargo_20211130155044.toml  Cargo_20211130155156.toml  Cargo_20211205151839.toml  Cargo_20211205151847.toml  Cargo_20211205152827.toml  LICENSE-CC BY-NC-ND_20211212020642.html  LICENSE-CC BY-NC-SA_20211212000936  LICENSE-CC BY-NC-SA_20211212003542.html  LICENSE-CC BY-NC-SA_20211212004502.html  LICENSE-CC BY-NC-SA_20211212004553.html  LICENSE-CC BY-NC-SA_20211212005553.html  LICENSE-CC BY-NC-SA_20211212005616.html  LICENSE-CC BY-NC-SA_20211212010902.html  LICENSE-CC BY-NC-SA_20211212011022.html  LICENSE-CC BY-NC-SA_20211212011035.html  LICENSE-CC BY-NC-SA_20211212011048.html  LICENSE-CC BY-NC-SA_20211212011310.html  LICENSE-CC BY-NC-SA_20211212011328.html  LICENSE-CC BY-NC-SA_20211212011351.html  LICENSE-CC BY-NC-SA_20211212011513.html  LICENSE-CC BY-NC-SA_20211212011634.html  (+16 more)
.history/src/: main_20211125092823.rs  main_20211125203748.rs  main_20211125204021.rs  main_20211125204622.rs  main_20211125233230.rs  main_20211125233459.rs  main_20211126122416.rs  main_20211126124255.rs  main_20211126124400.rs  main_20211126124504.rs  main_20211126124735.rs  main_20211126124857.rs  main_20211126124938.rs  main_20211126125136.rs  main_20211126125142.rs  main_20211126125143.rs  main_20211126125359.rs  main_20211126125612.rs  main_20211126125711.rs  main_20211126125914.rs  main_20211126160200.rs  main_20211126160454.rs  main_20211126162134.rs  main_20211126162633.rs  main_20211126162737.rs  main_20211126163602.rs  main_20211126163631.rs  main_20211126163823.rs  main_20211126163958.rs  main_20211126164118.rs  main_20211126164238.rs  main_20211126165104.rs  main_20211126170000.rs  main_20211126200434.rs  main_20211126201054.rs  main_20211127105900.rs  main_20211129175256.rs  main_20211130145237.rs  main_20211130145530.rs  main_20211130145921.rs  (+20 more)
.history/website/: index_20211205230242.html  index_20211205231736.html  index_20211205232201.html
Ascendance/: Cargo.toml  README.MD
Ascendance/src/: .main.rs.swp  actor.rs  actor.rs.txt  config.rs  inventory.rs  level.rs  lib.rs  loading_screen.rs  main.rs  message.rs  save_load.rs  sound.rs  tempstore.rs  weapon.rs
AscendingToGodhood/: Cargo.toml
AscendingToGodhood/src/: main.rs
CreatureLib/: Cargo.toml
CreatureLib/src/: Template.txt  lib.rs
Game/: Cargo.toml
Game/src/: main.rs
License/: LICENSE-QUINN  LICENSE-SERDE_YAML
Web/WebApps/server-connect/: Cargo.toml  LICENSE_MIT
Web/WebApps/server-connect/src/: lib.rs
Web/Website/: angular.json  index.html  package.json
_license/: LICENSE-RON  LICENSE-SERDE_JSON
app/: .gitignore  plugins.ron
app/src/: main.rs  message.rs  sound.rs  weapon.rs
client/: Cargo.toml
client/src/: lib.rs
common/: Cargo.toml
common/base/: Cargo.toml
common/logging/: Cargo.toml
common/net/: Cargo.toml
data/: Cargo.toml
data/configs/: bots.ron  brewery_possibilities.ron  filedownloadlist.ron  foods.ron  items.ron  levelling.ron  magic.ron  projectiles.ron  weapons.ron
data/configs/a1/: enemy-configA1.ron  enemy-configA1.toml
data/devmeta/: GAME.XML
data/indev/: cavedarkness.glsl
data/models/: experiment room.blend1
data/models/indev/: tree1.blend
data/music/: The_Cathedral.mscz  The_church_loop.mscz  theme.mscz  violin_practice.mscz
data/music/.mscbackup/: .The_Cathedral.mscz,  .theme.mscz,  .violin_practice.mscz,
data/music/church/: holy-cathedral-wav.wav.options
data/scene/: startingdungeon.rgs
data/sounds/: sound_list.ron
data/src/: lib.rs  user.rs
data/src/items/inventory/: inventory.rs
data/src/items/src/: lib.rs
data/src/items/src/categories/: mod.rs
data/src/items/src/inventory/: selected.rs
data/src/render/: Cargo.toml
data/src/user-interfaces/: lib.rs
data/src/user-interfaces/crafting/: advancedanvil.rs  basicbrewingtable.rs  levelcheck.rs
data/src/user-interfaces/game/: opening.rs  openingf.rs
data/src/user-interfaces/src/crafting/: mod.rs
data/src/user-interfaces/src/crafting/advancedbrewingtable/: mod.rs
data/src/user-interfaces/src/crafting/mediummetalanvil/: mod.rs
data/src/user-interfaces/src/game/: mod.rs  openingf.rs
data/src/user-interfaces/user/characterdisplay/: characterdisplay.rs
data/src/user-interfaces/user/inventory/: levelcheck.rs
data/src/world-interaction/: Cargo.toml
data/textures/FloorTiles/marble-floor/: FloorTilesDeffuse.png.options
data/textures/Rock020/: rock_one.blend  untitled.blend
docker/: Dockerfile
docker windows/: docker-compose.debug.yml
editor/: Cargo.toml
editor/src/: main.rs
executor/: Cargo.toml
executor/src/: main.rs
lore/: Basis.md
network/: Cargo.toml
network/protocol/: Cargo.toml
plugin/: Cargo.toml
server/: Cargo.toml
server-cli/: Cargo.toml
src/: .main.rs.swp  level.rs  loading_screen.rs  main.rs  message.rs  sound.rs  statistics.rs
src/GUI/: mod.rs
src/data/: recipelist.rs
src/entitygen/: adventurer.rs  armoured_skeleton.rs  armoured_zombie.rs  basic_bandit.rs  demihuman.rs  friendly_bandit.rs  friendly_zombie.rs  hard_bandit.rs  mage.rs
world/: Cargo.toml
(+183 files in other folders)
