[package]
name = "ascendance-game"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bindgen = "0.59.2"
bytes = "1.1.0"
chrono = "0.4.19"
cmake = "0.1.46"
config = "0.11.0"
configparser = "3.0.0"
console = "0.15.0"
csv = "1.1.6"
directories = "4.0.1"
dirs = "4.0.0"
env_logger = "0.9.0"
fastrand = "1.6.0"
flexi_logger = "0.22.0"
fsio = "0.3.0"
futures = { version = "0.3.19", default-features = false }
futures-channel = "0.3.19"
futures-sink = "0.3.19"
futures-task = "0.3.19"
futures-util = "0.3.19"
git-version = "0.3.5"
glam = "0.20.2"
heck = "0.4.0"
hex = "0.4.3"
humantime = "2.1.0"
ignore = "0.4.18"
indexmap = "1.7.0"
jni = "0.19.0"
jobserver = "0.1.24"
keyring = "1.0.0"
lazy_static = "1.4.0"
lettre = "0.10.0-rc.4"
log = "0.4.14"
num-iter = "0.1.42"
pkg-config = "0.3.24"
quick-xml = "0.22.0"
rand = "0.8.4"
rand_core = "0.6.3"
regex = "1.5.4"
regex-syntax = "0.6.25"
remove_dir_all = "0.7.0"
rg3d = { git = "https://github.com/rg3dengine/rg3d", rev="90309500ee40b1e0eb492f3ad20e0f4c363b9f55" }
rg3d-sound = "0.25.0"
ron = "0.7.0"
savefile = "0.8.3"
serde = { version = "1.0.132", features = ["derive"] }
serde_any = "0.5.0"
serde_json = "1.0.73"
serde_yaml = "0.8.23"
socket2 = "0.4.2"
textwrap = "0.14.2"
thiserror = "1.0.30"
thread_local = "1.1.3"
time = "0.3.5"
tokio = "1.15.0"
toml = "0.5.8"
tracing = "0.1.29"
tracing-subscriber = "0.3.4"
utf8parse = "0.2.0"
vec_map = "0.8.2"

[features]
