[workspace]
members = [
	# Binary to run the main game
	"Ascendance",
	
	# Binary scripts to add to the executor
	# "scripts/creatures/undead_bot",
	# "scripts/creatures/human_bot",
	# "scripts/world/objects/summoning-giant",
	# "scripts/attacks/meteor-shower",
	# "scripts/attacks/fallen-walls",
	# "scripts/world/objects/doors",
	# "scripts/world/objects/organ-pipes",

]

[profile.release]
strip = true
	[profile.release.build-override]
	opt-level = 2
	codegen-units = 128
	incremental = true
[profile.dev]
debug-assertions = true
incremental = true
