[workspace]
members = [
	# Binary to run the main game
	"Ascendance",
	"editor",
	"executor",
	
	# Binary scripts to add to the executor
	# "scripts/creatures/undead_bot",
	# "scripts/creatures/human_bot",
	# "scripts/world/objects/summoning-giant",
	# "scripts/attacks/meteor-shower",
	# "scripts/attacks/fallen-walls",
	# "scripts/world/objects/doors",
	# "scripts/world/objects/organ-pipes",

]

[profile.release]
strip = true
opt-level = 3
codegen-units = 128
incremental = true
[profile.dev]
strip = "symbols"
debug-assertions = true
incremental = true
[profile.dev.package."*"]
opt-level = 3
