[package]
name = "ascendance-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-base = { package = "ascendance-common-base", path = "base" }
serde = { version = "1.0.132", features = ["derive", "rc"] }
enum-iterator = "0.7.0"
vek = { version = "0.15.4", features = ["serde"] }
strum = { version = "0.23.0", features = ["derive"] }
strum_macros = "0.23.1"
