[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
render = { path = "./src/render", version = "0.1.0"}
items = { path = "./src/items", version = "0.1.0" }
user-interfaces = { path = "./src/user-interfaces", version = "0.1.0" }
world-interaction = { path = "./src/world-interaction", version = "0.1.0" }
rg3d = "0.23.1"
