[package]
name = "ascendance-common-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tracy = ["tracy-client"]

[dependencies]
tracing = { version = "0.1", default-features = false }
directories-next = "2.0"

# Tracy
tracy-client = { version = "0.12.0", optional = true }
