[package]
name = "ascendance-common-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {package = "ascendance-common", path = "../../common"}
bincode = "1.3.3"
flate2 = "1.0.22"
image = { version = "0.23.14", default-features = false, features = ["png", "jpeg"] }
num-traits = "0.2.14"
sum_type = "0.2.0"
vek = { version = "0.15.4", features = ["serde"] }
tracing = { version = "0.1.29", default-features = false }
# Data structures
hashbrown = { version = "0.11.2", features = ["rayon", "serde", "nightly"] }
# Serde
serde = { version = "1.0.132", features = ["derive"] }
