[package]
name = "server-connect"
version = "0.1.0"
authors = ["DuckEater54 <ikigami.business@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.78"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
wasmi = "0.9.1"
web-sys = "0.3.55"
wasmparser = "0.81.0"
wasm-bindgen-futures = "0.4.28"
http = "0.2.5"
cranelift-wasm = "0.78.0"
console_log = "0.2.0"
js-sys = "0.3.55"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

[profile.release]
opt-level = "s"
